--- a/BakeryManagementSystem/templates/products.html
+++ b/BakeryManagementSystem/templates/products.html
@@ -1,28 +1,56 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <title>Products</title>
 </head>
-<body>
 
-{% block data %}
-{% for data in cat_data %}
-{{data.category_name}}
-{% endfor %}
-{% for data in pro_data %}
-{{data.product_name}}
-{{data.product_tag}}
-{{data.product_description}}
+<body>
+    <div class="container">
+        {% block data %}
+        {% for data in cat_data %}
+        <figure class="text-center">
+            <h1>{{data.category_name}}s</h1>
+        </figure>
+        <div class="row row-cols-auto d-flex flex-wrap">
+            {% for data in pro_data %}
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="/media/{{data.product_image}}" class="card-img-top" alt="img">
+                    <div class="card-body">
+                        <figure class="text-center">
+                            <h5 class="card-title">
+                                <figure class="text-center">{{data.product_name}}</figure>
+                            </h5>
+                            <p class="card-text">{{data.product_description}}</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% endfor %}
+        {% endblock %}
+    </div>
+</body>
+
+<!-- {{data.product_name}}
+    {{data.product_tag}}
+    {{data.product_description}}
     {{data.product_image}}
     <img src="/media/{{data.product_image}}" alt="img" width="50" height="50">
-{{data.product_price}}
+    {{data.product_price}}
     <br>
-    <br>
-{% endfor %}
-{% endblock %}
+    <br> -->
 
-
-</body>
 </html>
