--- a/BakeryManagementSystem/templates/products.html
+++ b/BakeryManagementSystem/templates/products.html
@@ -13,9 +13,52 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <title>Products</title>
+    <style>
+        .container {
+            background-color: darkgray;
+            padding-bottom: 1%;
+        }
+    </style>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/product">Home</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li> -->
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li> -->
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-dark" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         {% block data %}
         {% for data in cat_data %}
@@ -28,12 +71,15 @@
                 <div class="card" style="width: 18rem;">
                     <img src="/media/{{data.product_image}}" class="card-img-top" alt="img">
                     <div class="card-body">
+                        <h5 class="card-title">
+                            Rs.{{data.product_price}}
+                        </h5>
                         <figure class="text-center">
-                            <h5 class="card-title">
-                                <figure class="text-center">{{data.product_name}}</figure>
-                            </h5>
-                            <p class="card-text">{{data.product_description}}</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            {{data.product_name}}
+                        </figure>
+                        <div class="d-grid">
+                            <button class="btn btn-primary">Add to Cart</button>
+                        </div>
                     </div>
                 </div>
             </div>
